# tiger-2024

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  README.md
doc/: lab2.md  lab3.md  lab4.md  lab5-part0.md  lab5-part1.md  lab5-part2.md  lab6.md
scripts/: build_llvm.sh  build_tig.sh  grade.sh  load_image_win.bat  show-AST.py  show_cfg.sh  start_container_win.bat
scripts/lab5_test/: instruction.py  interpreter.py  state_table.py  type.py
src/straightline/: slp.cc  slp.h
src/tiger/absyn/: absyn.cc  absyn.h
src/tiger/canon/: canon.cc  canon.h
src/tiger/codegen/: assem.cc  assem.h  codegen.cc  codegen.h
src/tiger/env/: env.cc  env.h
src/tiger/escape/: escape.cc
src/tiger/frame/: frame.h  temp.cc  temp.h  x64frame.cc  x64frame.h
src/tiger/lex/: scanner.h  tiger.lex
src/tiger/liveness/: flowgraph.cc  flowgraph.h  liveness.cc  liveness.h
src/tiger/main/: main.cc  test_codegen.cc  test_lex.cc  test_parse.cc  test_semant.cc  test_translate_llvm.cc
src/tiger/output/: logger.h  output.cc  output.h
src/tiger/parse/: parser.h  tiger.y
src/tiger/regalloc/: color.h  regalloc.cc  regalloc.h
src/tiger/runtime/: runtime_llvm.c
src/tiger/semant/: semant.cc  semant.h  types.cc  types.h
src/tiger/translate/: translate.cc  translate.h
src/tiger/util/: graph.h
testdata/lab5or6/llvm-refs/: bsearch.tig.ll  dec2bin.tig.ll  merge.tig.ll  prime.tig.ll  qsort.tig.ll  queens.tig.ll  tbi.tig.ll  tfact.tig.ll  tfo.tig.ll  tif.tig.ll  tifn.tig.ll  tlink.tig.ll  trec.tig.ll  twhi.tig.ll
